# grasplens

./: .gitignore  README.md  index.html  proposal.md  pyproject.toml
assets/: styles.css
assets/data/: metrics.csv  results.json
docs/: index.html
docs/assets/: site.js  styles.css
docs/assets/data/: results.json
experiments/: make_figures.py  run_benchmark.py
grasplens/: __init__.py  conformal.py  dataset.py  filter.py  geometry.py  grasps.py  metrics.py  policy.py  probes.py  scene.py  specs.py  visualization.py
outputs/: benchmark_spec.json
