[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grasplens"
version = "0.1.0"
description = "Interpretable runtime assurance benchmark for learned robotic grasping."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scikit-learn",
  "matplotlib",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
torch = ["torch"]

[tool.setuptools.packages.find]
include = ["grasplens*"]

